<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_global">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="BackgroundNotification"
            android:summary="@string/settings_notification_describe"
            android:title="@string/settings_notification" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="MessageAlert"
            android:summary="@string/settings_alert_describe"
            android:title="@string/settings_alert" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_about">
        <Preference
            android:summary="@string/app_url"
            android:title="@string/app_license" />
        <Preference android:title="@string/author" />
    </PreferenceCategory>
</PreferenceScreen>
